tests/fixtures/invalid/none_mod_bool.py
# Cannot modulo None and Bool
x: None = None % True
